[package]
name = "pcomprs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
indicatif = "0.17.8"
itertools = "0.13.0"
ndarray = "0.15.6"
process_mining = "0.3.14"
rand = "0.8.5"
rust-optimal-transport = { version = "0.2.0", features = ["blas"] }
