[package]
name = "pcomprs"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
indicatif = "0.17.8"
itertools = "0.13.0"
ndarray = "0.16.1"
just_emd = { git = "https://github.com/cpitsch/just-emd", version = "0.1.0"}
process_mining = "0.3.14"
rand = "0.8.5"
rayon = {version = "1.10.0", optional = true}

[features]
default = []
parallel = ["dep:rayon"]
